docs-archive/apache-airflow-providers-snowflake/6.15.0/_sources/_api/airflow/providers/snowflake/operators/snowpark_containers/index.rst.txt
airflow.providers.snowflake.operators.snowpark_containers
=========================================================

.. py:module:: airflow.providers.snowflake.operators.snowpark_containers


Attributes
----------

.. autoapisummary::

   airflow.providers.snowflake.operators.snowpark_containers.TERMINAL_STATUSES
   airflow.providers.snowflake.operators.snowpark_containers.NON_TERMINAL_STATUSES


Classes
-------

.. autoapisummary::

   airflow.providers.snowflake.operators.snowpark_containers.SnowparkContainerJobStatus
   airflow.providers.snowflake.operators.snowpark_containers.SnowparkContainerJobOperator


Module Contents
---------------

.. py:class:: SnowparkContainerJobStatus

   Bases: :py:obj:`str`, :py:obj:`enum.Enum`


   Statuses of a Snowpark Container Services.


   .. py:attribute:: PENDING
      :value: 'PENDING'



   .. py:attribute:: RUNNING
      :value: 'RUNNING'



   .. py:attribute:: CANCELLING
      :value: 'CANCELLING'



   .. py:attribute:: SUSPENDING
      :value: 'SUSPENDING'



   .. py:attribute:: DELETING
      :value: 'DELETING'



   .. py:attribute:: DONE
      :value: 'DONE'



   .. py:attribute:: FAILED
      :value: 'FAILED'



   .. py:attribute:: CANCELLED
      :value: 'CANCELLED'



   .. py:attribute:: INTERNAL_ERROR
      :value: 'INTERNAL_ERROR'



.. py:data:: TERMINAL_STATUSES
   :type:  frozenset[SnowparkContainerJobStatus]

.. py:data:: NON_TERMINAL_STATUSES
   :type:  frozenset[SnowparkContainerJobStatus]

.. py:class:: SnowparkContainerJobOperator(*, compute_pool, container_name, spec = None, spec_stage = None, spec_text = None, name = None, query_warehouse = None, replicas = 1, wait_for_completion = True, drop_on_completion = True, poll_interval = 10, snowflake_conn_id = 'snowflake_default', database = None, schema = None, role = None, warehouse = None, **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.standard.operators.BaseOperator`


   Execute a job on Snowpark Container Services.

   Submits a container job to a compute pool via ``EXECUTE JOB SERVICE``,
   optionally polls for completion, retrieves container logs, and
   drops the job service on success.

   .. seealso::
       `Snowpark Container Services <https://docs.snowflake.com/en/developer-guide/snowpark-container-services/overview>`_

   :param compute_pool: name of the compute pool to run the job on
   :param container_name: container name as defined in the service specification file,
       used for retrieving container logs
   :param spec: spec filename on the stage (e.g. ``'spec.yaml'``).
       Must be provided together with ``spec_stage``
   :param spec_stage: stage where the spec file is stored (e.g. ``'@my_stage'``).
       Must be provided together with ``spec``
   :param spec_text: inline YAML spec text, as an alternative to ``spec``/``spec_stage``.
       The text is wrapped in ``$$`` delimiters automatically
   :param name: (Optional) job service name. If not provided, Snowflake
       auto-generates a name
   :param query_warehouse: (Optional) warehouse for SQL queries run inside the container.
       This is separate from the ``warehouse`` parameter used by the operator's
       own SQL commands
   :param replicas: (Optional) number of job replicas to run. (default value: 1)
   :param wait_for_completion: poll until the job reaches a terminal state.
       When disabled, the job is submitted and the operator returns
       immediately. (default value: True)
   :param drop_on_completion: drop the job service after the job finishes
       successfully. Failed jobs are not dropped, allowing inspection
       in Snowflake. (default value: True)
   :param poll_interval: the interval in seconds to poll the query status.
       (default value: 10)
   :param snowflake_conn_id: Reference to
       :ref:`Snowflake connection id<howto/connection:snowflake>`
   :param database: name of database (will overwrite database defined
       in connection)
   :param schema: name of schema (will overwrite schema defined in
       connection)
   :param role: name of role (will overwrite any role defined in
       connection's extra JSON)
   :param warehouse: name of warehouse (will overwrite any warehouse
       defined in the connection's extra JSON). Used for the operator's
       own SQL commands, not for the container's queries


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('compute_pool', 'spec', 'spec_stage', 'container_name', 'spec_text', 'name', 'query_warehouse',...



   .. py:attribute:: compute_pool


   .. py:attribute:: container_name


   .. py:attribute:: spec
      :value: None



   .. py:attribute:: spec_stage
      :value: None



   .. py:attribute:: spec_text
      :value: None



   .. py:attribute:: name
      :value: None



   .. py:attribute:: query_warehouse
      :value: None



   .. py:attribute:: replicas
      :value: 1



   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: drop_on_completion
      :value: True



   .. py:attribute:: poll_interval
      :value: 10



   .. py:attribute:: snowflake_conn_id
      :value: 'snowflake_default'



   .. py:attribute:: database
      :value: None



   .. py:attribute:: schema
      :value: None



   .. py:attribute:: role
      :value: None



   .. py:attribute:: warehouse
      :value: None



   .. py:attribute:: job_name
      :type:  str | None
      :value: None



   .. py:method:: on_kill()

      Drop the running service on task kill.



   .. py:method:: execute(context)

      Submit and optionally wait for a Snowpark Container Services job.



